All Mine button js

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -20,14 +20,13 @@
     </label>
   </div>
 
-
   <% collapse_count = 1 %>
 
   <div class = "question_list">
   <% @questions.each do |question| %>
-      <% #if question["user_id"] == current_user.id %>
 
-      <div class="panel-group">
+      <div class="panel-group" 
+      <% if question["user_id"] == current_user.id %> "mine-question" <% end %>>
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title">
