--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <br>
     <div class = "find_me">
@@ -12,11 +13,11 @@
 
 
   <div id = "all-mine-filter" class="btn-group" data-toggle="buttons">
-    <label class="btn btn-primary active">
-      <input type="radio" name="options" id="all_radio" autocomplete="off" checked> All
+    <label class="btn btn-primary active" id="all_radio">
+      <input type="radio" name="options" autocomplete="off" checked> All
     </label>
-    <label class="btn btn-primary">
-      <input type="radio" name="options" id="mine-radio" autocomplete="off"> Mine
+    <label class="btn btn-primary" id="mine-radio">
+      <input type="radio" name="options"  autocomplete="off"> Mine
     </label>
   </div>
 
