Other Mine Buttons

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,11 +4,11 @@
   <h3 class="center"><b>Questions</b></h3><br>
 
   <div id = "all-mine-filter" class="btn-group" data-toggle="buttons">
-    <label class="btn btn-primary active" id="all-radio">
-      <input type="radio" name="options" autocomplete="off" checked> All
-    </label>
     <label class="btn btn-primary" id="mine-radio">
       <input type="radio" name="options"  autocomplete="off"> Mine
+    </label>
+    <label class="btn btn-primary active" id="other-radio">
+      <input type="radio" name="options" autocomplete="off" checked> Other
     </label>
   </div>
 
@@ -17,7 +17,13 @@
   <div class = "question_list">
   <% @questions.each do |question| %>
 
-      <div class= "panel-group <%= 'other-question' if question['user_id'] != current_user.id%>">
+      
+      <% if question['user_id'] == current_user.id %>
+      <div class = "panel-group my-question">
+      <% else %>
+      <div class = 'panel-group other-question hidden'>
+      <% end %>
+
 
       <div class="panel panel-default">
         <div class="panel-heading">
